# snake

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  README.md  compile  conanfile.py  init  meson.build
src/: main.cpp
src/game/: environment.h  snake.cpp  snake.h  vector2.cpp  vector2.h
